# mazer-wasm

./: .gitignore  CMakeLists.txt  LICENSE  README.md  patchBuildFiles.js
include/: logger.h
public/: index.html  index.js
src/: logger.cc  sdl.cc
